Fix small gap after custom svg shape divider

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -48,7 +48,7 @@ a:hover {
 
 .custom-shape-divider-bottom-1686091629 {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
