--- a/src/app/expertise/expertise.component.css
+++ b/src/app/expertise/expertise.component.css
@@ -30,7 +30,7 @@ b {
 
 .custom-shape-divider-bottom-1686075032 {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
