--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -120,7 +120,7 @@ a {
 /* #Region Shape */
 .custom-shape-divider-top-1686091868 {
   position: absolute;
-  top: 0;
+  top: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
