--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -81,7 +81,7 @@
 
 .custom-shape-divider-bottom-1686000714 {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   overflow: hidden;
